--- a/Login/index.html
+++ b/Login/index.html
@@ -15,7 +15,7 @@
 
             <div class="login_boxes">
                 <input placeholder="Username" type="text" required>
-                <input placeholder="password" type="password" required>
+                <input placeholder="Password" type="password" required>
             </div>
 
             <div class="login_remember-forget">
@@ -23,7 +23,7 @@
                     <input type="checkbox" name="Remember me">
                     <label for="remember">Remember me</label>
                 </div>
-                <a href="#">Forget password?</a>
+                <a href="forget.html">Forget password?</a>
             </div>
 
             <button class="login_login">Login</button>
