--- a/FAQs/index.html
+++ b/FAQs/index.html
@@ -11,45 +11,44 @@
 
     <div class="container">
         <div class="title">
-            <i class="bx bx-star"></i> 
             <h1>
                 FAQs
             </h1>
         </div>
         <div class="first_FAQ">
-            <h2>
+            <h2 class="event">
             What is Frontend Mentor, and how will it help me?
-            </h2> <i class="bx bx-plus"></i>
+            </h2> 
             <p id="first_FAQ"></p>
         </div>
         <div class="second_FAQ">
-            <h2>
+            <h2 class="event">
             Is Front_Ment free?
-            </h2> <i class="bx bx-plus"></i>
+            </h2 class="event"> 
             <p id="second_FAQ"></p>
         </div>
         <div class="third_FAQ">
-            <h2>
+            <h2 class="event">
             Can I use Front_Ment Projects in my portfolio?
-            </h2> <i class="bx bx-plus"></i>
+            </h2> 
             <p id="third_FAQ"></p>
         </div>
         <div class="fourth_FAQ">
-            <h2>
+            <h2 class="event">
             How can I get help if I'm stuck on a challenge? 
-            </h2> <i class="bx bx-plus"></i>
+            </h2> 
             <p id="fourth_FAQ"></p>
         </div>
         <div class="fifth_FAQ">
-            <h2>
+            <h2 class="event">
             How create a new account? 
-            </h2> <i class="bx bx-plus"></i>
+            </h2> 
             <p id="fifth_FAQ"></p>
         </div>
         <div class="sixth_FAQ">
-            <h2>
+            <h2 class="event">
             I forget my password, what do I do? 
-            </h2> <i class="bx bx-plus"></i>
+            </h2> 
             <p id="sixth_FAQ"></p>
         </div>
     </div>
